--- a/static/styles.css
+++ b/static/styles.css
@@ -15,6 +15,7 @@ div.left {
     font-size: x-large;
     margin-left: 100px;
 
+
     
 }
 
@@ -25,6 +26,7 @@ div.left {
     margin-left: 50px;
     font-size: x-large;
     margin-right: 100px;
+
 
 
 }
@@ -56,8 +58,8 @@ div.overlay_personalization {
     margin-right: auto;
 
     text-align: center;
-    width: 1200px;
-    height: 500px;
+    width: 1150px;
+    height: 1225px;
     opacity: 1;
     background: rgba(0, 0, 0, 0.477);
     z-index: 10000;
@@ -72,6 +74,9 @@ div.overlay_personalization {
 
 }
 
+h1.overlay_element {
+  background-color: #4CAF50;
+}
 
 input[type="submit"] {
     background-color: #4CAF50; /* Set background color */
@@ -93,7 +98,7 @@ input[type="submit"] {
 
 
   select {
-    font-size: 16px;
+    font-size: 25px;
     font-family: Arial, sans-serif;
     padding: 8px 12px;
     border: 1px solid #ccc;
@@ -105,6 +110,8 @@ input[type="submit"] {
     background-position: right 8px center;
     background-size: 16px;
     cursor: pointer;
+    background-color: #4CAF50;
+    color: white;
   }
   
   select option {
@@ -114,6 +121,21 @@ input[type="submit"] {
   }
   
 
-
+  table {
+    border-collapse: collapse;
+    width: 100%;
+  }
+  
+  th, td {
+    text-align: left;
+    padding: 8px;
+  }
+  
+  tr:nth-child(even){background-color: black}
+  
+  th {
+    background-color: #4CAF50;
+    color: white;
+  }
 
   
